--- a/css/index.css
+++ b/css/index.css
@@ -124,3 +124,10 @@
         font-size: 30px;
         font-weight: 500;
     }
+    
+    .jumbotron {
+        padding: 70px 30px 70px 30px;
+        margin: 0px auto;
+        color: #a17e1d;
+        ;
+    }
