--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@
         color: white !important;
     }
     
+    /* navbar */
+
     .navl {
         margin: auto;
         width: 88%;
@@ -34,89 +36,29 @@
     }
     
     .avtar {
-        padding-right: 1rem;
+        padding-right: .8rem;
     }
-    /* about start */
-    
-    .container {
-        height: 100%;
-        align-content: center;
-    }
-    
-    .image_outer_container {
-        margin-top: auto;
-        margin-bottom: auto;
-        border-radius: 50%;
-        position: relative;
-    }
-    
-    .image_inner_container {
-        border-radius: 50%;
-        padding: 5px;
-        background: #833ab4;
-        background: -webkit-linear-gradient(to bottom, #fcb045, #fd1d1d, #833ab4);
-        background: linear-gradient(to bottom, #fcb045, #fd1d1d, #833ab4);
-    }
-    
-    .image_inner_container img {
-        height: 200px;
-        width: 200px;
-        border-radius: 50%;
-        border: 5px solid white;
-    }
-    
-    .image_outer_container .green_icon {
-        background-color: #4cd137;
-        position: absolute;
-        right: 30px;
-        bottom: 10px;
-        height: 30px;
-        width: 30px;
-        border: 5px solid white;
-        border-radius: 50%;
-    }
-    /* about end */
+
+    /* Start */
     
     .Home {
-        background-image: url(../images/main.jpeg);
-        height: 93vh;
+        height: 75vh;
         margin-top: 4.1rem;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
     }
-    
+   
     .our_work {
-        width: 80%;
+        width: 95%;
         margin: auto;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        padding: 15px;
+        padding: 55px;
     }
     
-    .card {
-        margin-top: 2rem;
-        cursor: pointer;
-        transition: box-shadow .3s ease;
-    }
-    
-    .card:hover {
-        cursor: pointer;
-        box-shadow: inset -1px 3px 8px 5px rgb(253, 253, 253), 2px 5px 16px 5px rgb(177, 177, 177), -2px 0px 35px 28px rgba(0, 0, 0, -1);
-        transform: scale(1.04);
-    }
-    
-    footer {
-        background-color: rgb(41, 41, 41);
-        bottom: 0;
-        width: 100%;
-        color: white;
-        text-align: center;
-        justify-content: center;
-        height: 100%;
-        padding: .5rem;
-    }
     
     .label {
         text-align: center;
@@ -128,11 +70,42 @@
     .jumbotron {
         padding: 70px 30px 70px 30px;
         margin: 0px auto;
-        color: #a17e1d;
-        ;
+        color: #cfa224;
+        font-weight: 900;
+    }
+
+    /* card */
+
+    .cinfo{
+        font-weight: 600;
+    }
+
+    .card {
+        margin-top: 2rem;
+        cursor: pointer;
+        transition: box-shadow .1s ease;
     }
     
-    .btn:hover {
+    .card:hover {
         cursor: pointer;
-        transform: scale(1.15);
+        box-shadow: inset -1px 3px 8px 5px rgb(253, 253, 253), 2px 5px 16px 5px rgb(177, 177, 177), -2px 0px 35px 28px rgba(0, 0, 0, -1);
+        transform: scale(1.002);
     }
+
+    .card-body{
+        background-color: rgb(246, 246, 246);
+    }
+
+    /* footer */
+        
+    footer {
+        background-color: rgb(41, 41, 41);
+        bottom: 0;
+        width: 100%;
+        color: white;
+        text-align: center;
+        justify-content: center;
+        height: 100%;
+        padding: .5rem;
+    }
+    
