--- a/css/index.css
+++ b/css/index.css
@@ -8,9 +8,8 @@
         text-decoration: none !important;
         color: white !important;
     }
-    
     /* navbar */
-
+    
     .navl {
         margin: auto;
         width: 88%;
@@ -38,7 +37,6 @@
     .avtar {
         padding-right: .8rem;
     }
-
     /* Start */
     
     .Home {
@@ -47,9 +45,9 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+        box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .2);
     }
-   
+    
     .our_work {
         width: 95%;
         margin: auto;
@@ -58,7 +56,6 @@
         justify-content: space-around;
         padding: 55px;
     }
-    
     
     .label {
         text-align: center;
@@ -73,13 +70,12 @@
         color: #cfa224;
         font-weight: 900;
     }
-
     /* card */
-
-    .cinfo{
+    
+    .cinfo {
         font-weight: 600;
     }
-
+    
     .card {
         margin-top: 2rem;
         cursor: pointer;
@@ -91,13 +87,12 @@
         box-shadow: inset -1px 3px 8px 5px rgb(253, 253, 253), 2px 5px 16px 5px rgb(177, 177, 177), -2px 0px 35px 28px rgba(0, 0, 0, -1);
         transform: scale(1.002);
     }
-
-    .card-body{
+    
+    .card-body {
         background-color: rgb(246, 246, 246);
     }
-
     /* footer */
-        
+    
     footer {
         background-color: rgb(41, 41, 41);
         bottom: 0;
@@ -109,3 +104,7 @@
         padding: .5rem;
     }
     
+    .btn:hover {
+        cursor: pointer;
+        transform: scale(1.15);
+    }
